force-app/main/default/objects/Solar_Estimate_Address__c/Solar_Estimate_Address__c.object-meta.xml
<CustomObject>
    <label>Solar Estimate Address</label>
    <nameField>
        <displayFormat>SEA-{0000000}</displayFormat>
        <label>Solar Estimate Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solar Estimate Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>