force-app/main/default/objects/Solar_Estimate_Address__c/fields/Additional_Cost_Loan__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Loan__c</fullName>
    <label>Additional Cost (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>