force-app/main/default/objects/Solar_Estimate_Address__c/fields/Annual_kWh_Arcadia__c.field-meta.xml
<CustomField>
    <fullName>Annual_kWh_Arcadia__c</fullName>
    <label>Annual kWh (Arcadia)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>