force-app/main/default/objects/Solar_Estimate_Address__c/fields/Average_Monthly_Bill__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Bill__c</fullName>
    <label>Average Monthly Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>