force-app/main/default/objects/Solar_Estimate_Address__c/fields/Base_System_Cost_TPO__c.field-meta.xml
<CustomField>
    <fullName>Base_System_Cost_TPO__c</fullName>
    <label>Base System Cost TPO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>