force-app/main/default/objects/Solar_Estimate_Address__c/fields/Batteries_Available_TPO__c.field-meta.xml
<CustomField>
    <fullName>Batteries_Available_TPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batteries Available? (TPO)</label>
    <type>Checkbox</type>
</CustomField>