force-app/main/default/objects/Solar_Estimate_Address__c/fields/Batteries_Cost_Cash__c.field-meta.xml
<CustomField>
    <fullName>Batteries_Cost_Cash__c</fullName>
    <label>Batteries Cost (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>