force-app/main/default/objects/Solar_Estimate_Address__c/fields/Batteries_Count_Loan__c.field-meta.xml
<CustomField>
    <fullName>Batteries_Count_Loan__c</fullName>
    <label>Batteries Count (Loan)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>