force-app/main/default/objects/Solar_Estimate_Address__c/fields/Best_Panels_Count__c.field-meta.xml
<CustomField>
    <fullName>Best_Panels_Count__c</fullName>
    <label>Best Panels Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>