force-app/main/default/objects/Solar_Estimate_Address__c/fields/Competitor_Final_Price_Loan__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Final_Price_Loan__c</fullName>
    <label>Competitor Final Price (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>