force-app/main/default/objects/Solar_Estimate_Address__c/fields/Competitor_Incentives_Loan__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Incentives_Loan__c</fullName>
    <label>Competitor Incentives (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>