force-app/main/default/objects/Solar_Estimate_Address__c/fields/Completed_Analysis_Process__c.field-meta.xml
<CustomField>
    <fullName>Completed_Analysis_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Analysis Process?</label>
    <type>Checkbox</type>
</CustomField>