force-app/main/default/objects/Solar_Estimate_Address__c/fields/Completed_Provider_Account_Id_Process__c.field-meta.xml
<CustomField>
    <fullName>Completed_Provider_Account_Id_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Provider Account Id Process?</label>
    <type>Checkbox</type>
</CustomField>