force-app/main/default/objects/Solar_Estimate_Address__c/fields/Completed_Solar_Profiles_Process_Cash__c.field-meta.xml
<CustomField>
    <fullName>Completed_Solar_Profiles_Process_Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Solar Profiles Process (Cash)?</label>
    <type>Checkbox</type>
</CustomField>