force-app/main/default/objects/Solar_Estimate_Address__c/fields/Depreciation_Cash__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Cash__c</fullName>
    <label>Depreciation (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>