force-app/main/default/objects/Solar_Estimate_Address__c/fields/Domestic_Content_Credit_Cash__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Content_Credit_Cash__c</fullName>
    <label>Domestic Content Credit (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>