force-app/main/default/objects/Solar_Estimate_Address__c/fields/Failed_Google_Building_Insights__c.field-meta.xml
<CustomField>
    <fullName>Failed_Google_Building_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Google Building Insights?</label>
    <type>Checkbox</type>
</CustomField>