force-app/main/default/objects/Solar_Estimate_Address__c/fields/Failed_Solar_Estimate_Process__c.field-meta.xml
<CustomField>
    <fullName>Failed_Solar_Estimate_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Solar Estimate Process?</label>
    <type>Checkbox</type>
</CustomField>