force-app/main/default/objects/Solar_Estimate_Address__c/fields/Federal_ITC_Loan__c.field-meta.xml
<CustomField>
    <fullName>Federal_ITC_Loan__c</fullName>
    <label>Federal ITC (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>