force-app/main/default/objects/Solar_Estimate_Address__c/fields/Final_Price_Cash__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_Cash__c</fullName>
    <label>Final Price (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>