force-app/main/default/objects/Solar_Estimate_Address__c/fields/Finance_Type_Available_Cash__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type_Available_Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Type Available? (Cash)</label>
    <type>Checkbox</type>
</CustomField>