force-app/main/default/objects/Solar_Estimate_Address__c/fields/Finance_Type_Available_Loan__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type_Available_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Type Available? (Loan)</label>
    <type>Checkbox</type>
</CustomField>