force-app/main/default/objects/Solar_Estimate_Address__c/fields/Gross_System_Cost_Cash__c.field-meta.xml
<CustomField>
    <fullName>Gross_System_Cost_Cash__c</fullName>
    <label>Gross System Cost (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>