force-app/main/default/objects/Solar_Estimate_Address__c/fields/Initiate_Solar_Estimate_Process__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Solar_Estimate_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate Solar Estimate Process?</label>
    <type>Checkbox</type>
</CustomField>