force-app/main/default/objects/Solar_Estimate_Address__c/fields/Last_Process_Run_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Process_Run_Timestamp__c</fullName>
    <label>Solar Estimate Process Last Run</label>
    <type>DateTime</type>
</CustomField>