force-app/main/default/objects/Solar_Estimate_Address__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Solar Estimate Addresses</relationshipLabel>
    <relationshipName>Solar_Estimate_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>