force-app/main/default/objects/Solar_Estimate_Address__c/fields/LSE_Id__c.field-meta.xml
<CustomField>
    <fullName>LSE_Id__c</fullName>
    <label>LSE Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>