force-app/main/default/objects/Solar_Estimate_Address__c/fields/Manual_Initiate_Solar_Estimate_Process__c.field-meta.xml
<CustomField>
    <fullName>Manual_Initiate_Solar_Estimate_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Initiate Solar Estimate Process?</label>
    <type>Checkbox</type>
</CustomField>