force-app/main/default/objects/Solar_Estimate_Address__c/fields/Master_Tariff_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Tariff_Id__c</fullName>
    <label>Master Tariff Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>