force-app/main/default/objects/Solar_Estimate_Address__c/fields/Monthly_Savings_Loan__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Savings_Loan__c</fullName>
    <label>Monthly Savings (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>