force-app/main/default/objects/Solar_Estimate_Address__c/fields/New_Lifetime_Solar_Cost_Typical__c.field-meta.xml
<CustomField>
    <fullName>New_Lifetime_Solar_Cost_Typical__c</fullName>
    <label>New Lifetime Solar Cost (Typical)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>