force-app/main/default/objects/Solar_Estimate_Address__c/fields/Old_Lifetime_Utility_Cost_Typical__c.field-meta.xml
<CustomField>
    <fullName>Old_Lifetime_Utility_Cost_Typical__c</fullName>
    <label>Old Lifetime Utility Cost (Typical)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>