force-app/main/default/objects/Solar_Estimate_Address__c/fields/Roof_Segment_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Roof_Segment_Summaries__c</fullName>
    <label>Roof Segment Summaries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>