force-app/main/default/objects/Solar_Estimate_Address__c/fields/Set_Best_Electrical_Offset__c.field-meta.xml
<CustomField>
    <fullName>Set_Best_Electrical_Offset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Best Electrical Offset?</label>
    <type>Checkbox</type>
</CustomField>