force-app/main/default/objects/Solar_Estimate_Address__c/fields/Solar_Estimate_Process_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Solar_Estimate_Process_Last_Run__c</fullName>
    <label>Solar Estimate Process Last Run</label>
    <type>DateTime</type>
</CustomField>