force-app/main/default/objects/Solar_Estimate_Address__c/fields/Solar_Offset_TPO__c.field-meta.xml
<CustomField>
    <fullName>Solar_Offset_TPO__c</fullName>
    <label>Solar Offset (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>