force-app/main/default/objects/Solar_Estimate_Address__c/fields/Solar_Tax_Filing_Service__c.field-meta.xml
<CustomField>
    <fullName>Solar_Tax_Filing_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar Tax Filing Service</label>
    <type>Checkbox</type>
</CustomField>