force-app/main/default/objects/Solar_Estimate_Address__c/fields/State_Lookup__c.field-meta.xml
<CustomField>
    <fullName>State_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State (Lookup)</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Solar Estimate Addresses</relationshipLabel>
    <relationshipName>Solar_Estimate_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>