force-app/main/default/objects/Solar_Estimate_Address__c/fields/Storage_Profile_Id_Loan__c.field-meta.xml
<CustomField>
    <fullName>Storage_Profile_Id_Loan__c</fullName>
    <label>Storage Profile Id (Loan)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>