force-app/main/default/objects/Solar_Estimate_Address__c/fields/System_Size_kW_Cash__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_Cash__c</fullName>
    <label>System Size (kW) (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>