force-app/main/default/objects/Solar_Estimate_Address__c/fields/Target_PPW_TPO__c.field-meta.xml
<CustomField>
    <fullName>Target_PPW_TPO__c</fullName>
    <label>Target PPW (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>