force-app/main/default/objects/Solar_Estimate_Address__c/fields/Tariff_Code__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Code__c</fullName>
    <label>Tariff Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>