force-app/main/default/objects/Solar_Estimate_Address__c/fields/Total_Baseline_Measures_Cash__c.field-meta.xml
<CustomField>
    <fullName>Total_Baseline_Measures_Cash__c</fullName>
    <label>Total Baseline Measures (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>