force-app/main/default/objects/Solar_Estimate_Address__c/fields/Total_Lifetime_Savings_Typical__c.field-meta.xml
<CustomField>
    <fullName>Total_Lifetime_Savings_Typical__c</fullName>
    <label>Total Lifetime Savings (Typical)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>