force-app/main/default/objects/Solar_Estimate_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>State__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>LSE_Id__c</columns>
    <columns>Average_Monthly_Bill__c</columns>
    <columns>Initiate_Solar_Estimate_Process__c</columns>
    <columns>Failed_Solar_Estimate_Process__c</columns>
    <columns>Last_Process_Run_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>